# Rust-Axum-Ticketing

./: .gitignore  Cargo.toml  README.md
migrations/: 20230417143142_init.up.sql
src/: config.rs  error.rs  handler.rs  main.rs  model.rs  route.rs  schema.rs  t_routes.rs
src/handlers/: auth_handlers.rs  comment_handlers.rs  mod.rs  ticket_handlers.rs
src/utils/: guard.rs  jwt.rs  jwt_auth.rs  mod.rs
